phone changes (future conflict) that wasnt pulled from main